<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">LC风格网,欢迎您。</string>
    <string name="app_name">LC风格网</string>
    <string name="app_name1">lcapk</string>
    <string name="app_back">返回</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
    <string name="cate_nvzhuang">女装</string>
    <string name="cate_xiebao">鞋包</string>
    <string name="cate_peishi">配饰</string>
    <string name="cate_meizhuang">美妆</string>
    <string name="cate_nanren">男人</string>
    <string name="cate_shenghuo">生活</string>
    <string name="cate_suiyiguang">随便逛</string>
    <string name="login">登录</string>
    <string name="login_sina">微博账号登录</string>
    <string name="login_qq">QQ账号登录</string>
    <string name="login_taobao">淘宝账号登录</string>
    <string name="login_lc">LC账号登录</string>
    <string name="login_like_more">想要喜欢更多商品?</string>
    <string name="login_immediately_reg"><u>还没有账号?马上注册</u></string>
    <string name="login_mail">电子邮件</string>
    <string name="login_pwd">登录密码</string>
    <string name="register">注册</string>
    <string name="register_nickname">用户呢称</string>
    <string name="register_mail">电子邮件</string>
    <string name="register_pwd">登录密码</string>
    <string name="register_login"><u>已有账号，马上登录</u></string>
    <string name="setting_mail">设置邮箱</string>
    <string name="setting_set">立即设置</string>
    <string name="setting_update">立即更新</string>
    <string name="setting_cache">立即清除</string>
    <string name="set_photo_next">下一步</string>
    <string name="goods_share">分享好友</string>
    <string name="goods_buy">查看详情</string>
    <string name="feedback">意见反馈</string>
    <string name="fav_no_fav">还没有喜欢过任何商品</string>
    <string name="fav_kqgg">快去逛逛吧！</string>
    <string name="fav_qugg">去逛逛</string>
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新…</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中…</string>
    <string name="umeng_common_action_info_exist">正在下载中.</string>
    <string name="umeng_common_info_interrupt">下载出错啦，请检查网络后继续。</string>
    <string name="umeng_common_action_pause">暂停</string>
    <string name="umeng_common_action_continue">继续</string>
    <string name="umeng_common_action_cancel">取消</string>
    <string name="umeng_common_download_notification_prefix">正在下载:</string>
    <string name="umeng_common_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_common_download_failed">下载失败</string>
    <string name="umeng_xp_size">大小</string>
    <string name="umeng_xp_action_open">打开</string>
    <string name="umeng_xp_action_browse">浏览</string>
    <string name="umeng_xp_action_download">下载</string>
    <string name="umeng_xp_action_callphone" />
    <string name="umeng_xp_more">更多精彩推荐</string>
    <string name="umeng_xp_back_to_top">回到顶部</string>
    <string name="umeng_xp_back">返回</string>
    <string name="umeng_xp_dowloadOrNot">是否下载推荐应用？</string>
    <string name="umeng_xp_title_info">精彩推荐</string>
    <string name="umeng_xp_dowload_dialog_dinfo">马上下载</string>
    <string name="umeng_xp_dowload_dialog_cinfo">马上拨打</string>
    <string name="umeng_xp_failed_loading">加载失败...</string>
    <string name="umeng_xp_no_browser_tips">请先安装浏览器..</string>
    <string name="umeng_xp_tip_download_pre">开始下载</string>
    <string name="umeng_xp_network_break_alert">请连接网络后再尝试！</string>
    <string name="umeng_xp_info_banner_deprecated">当前SDK版本不支持Banner样式,请联系客服.</string>
</resources>
