<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <HorizontalScrollView android:id="@id/horizontalScrollView" android:background="#fff6f6f6" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="50.0dip">
        <RelativeLayout android:background="#fff6f6f6" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <RadioGroup android:orientation="horizontal" android:id="@id/radioGroup" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_alignParentTop="true">
                <RadioButton android:id="@id/btn1" android:text="@string/cate_nvzhuang" style="@style/radioButton" />
                <RadioButton android:id="@id/btn2" android:text="@string/cate_xiebao" style="@style/radioButton" />
                <RadioButton android:id="@id/btn3" android:text="@string/cate_peishi" style="@style/radioButton" />
                <RadioButton android:id="@id/btn4" android:text="@string/cate_meizhuang" style="@style/radioButton" />
                <RadioButton android:id="@id/btn5" android:text="@string/cate_nanren" style="@style/radioButton" />
                <RadioButton android:id="@id/btn6" android:text="@string/cate_shenghuo" style="@style/radioButton" />
                <RadioButton android:id="@id/btn7" android:text="@string/cate_suiyiguang" style="@style/radioButton" />
                <RadioButton android:id="@id/btn8" android:visibility="gone" android:text="@string/cate_nvzhuang" style="@style/radioButton" />
            </RadioGroup>
            <ImageView android:id="@id/img1" android:background="#ffffdd00" android:layout_width="100.0dip" android:layout_height="4.0dip" android:layout_alignParentBottom="true" />
        </RelativeLayout>
    </HorizontalScrollView>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="2.0">
        <ImageView android:id="@id/iv_pic" android:background="@drawable/soft_lsit_icon_default" android:layout_width="fill_parent" android:layout_height="fill_parent" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <com.lcstyle.client.view.ListViewRefresh android:id="@id/mListView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:cacheColorHint="#ffffffff" android:divider="#ffffffff" android:dividerHeight="0.0dip" android:layout_weight="2.0" />
            <LinearLayout android:gravity="bottom" android:orientation="vertical" android:id="@id/ll_loading" android:background="#ffffffff" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textColor="@color/text_normal" android:gravity="center" android:id="@id/bt_load" android:layout_width="fill_parent" android:layout_height="42.0dip" android:text="加载中..." />
                <ProgressBar android:layout_gravity="center_horizontal" android:id="@id/pg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout android:id="@id/ll_head" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include android:id="@id/head" android:layout_width="wrap_content" android:layout_height="wrap_content" layout="@layout/head" />
    </LinearLayout>
</LinearLayout>