<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/iv_close" android:background="@drawable/icon_close" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip" android:layout_alignParentRight="true" />
    <TextView android:textColor="@color/text_white" android:id="@id/tv_like_more" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/login_like_more" android:layout_below="@id/iv_close" />
    <LinearLayout android:orientation="vertical" android:id="@id/ll_login" android:background="@drawable/tv_corner_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="60.0dip" android:layout_marginRight="30.0dip" android:layout_below="@id/tv_like_more">
        <RelativeLayout android:id="@id/rl_sina" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/text_black" android:id="@id/tv_sina" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="15.0dip" android:text="@string/login_sina" android:layout_centerHorizontal="true" />
            <ImageView android:id="@id/iv_sina" android:background="@drawable/icon_sina" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_alignParentLeft="true" />
        </RelativeLayout>
        <View android:id="@id/line1" android:background="#ffe3e0e0" android:layout_width="fill_parent" android:layout_height="0.30000007dip" />
        <RelativeLayout android:id="@id/rl_qq" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/text_black" android:id="@id/tv_qq" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/login_qq" android:layout_centerInParent="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_qq" android:background="@drawable/icon_qq" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginLeft="20.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:id="@id/line2" android:background="#ffe3e0e0" android:layout_width="fill_parent" android:layout_height="0.30000007dip" />
        <RelativeLayout android:id="@id/rl_taobao" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/text_black" android:id="@id/tv_taobao" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/login_taobao" android:layout_centerInParent="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_taobao" android:background="@drawable/icon_taobao" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginLeft="20.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:id="@id/line3" android:background="#ffe3e0e0" android:layout_width="fill_parent" android:layout_height="0.30000007dip" />
        <RelativeLayout android:id="@id/rl_lc" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <TextView android:textSize="18.0sp" android:textColor="@color/text_black" android:id="@id/tv_lc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/login_lc" android:layout_centerInParent="true" android:layout_centerVertical="true" />
            <ImageView android:id="@id/iv_lc" android:background="@drawable/icon_lc" android:layout_width="35.0dip" android:layout_height="35.0dip" android:layout_marginLeft="20.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <TextView android:textColor="@color/text_normal" android:gravity="center_horizontal" android:id="@id/tv_reg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/login_immediately_reg" android:layout_below="@id/ll_login" />
    <LinearLayout android:id="@id/ll_head" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <include android:id="@id/head" android:layout_width="wrap_content" android:layout_height="wrap_content" layout="@layout/head" />
    </LinearLayout>
</RelativeLayout>