<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/ll_login" android:background="@drawable/tv_corner_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="30.0dip">
        <RelativeLayout android:id="@id/rl_nickname" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <TextView android:textSize="18.0sp" android:id="@id/tv_nickname" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/register_nickname" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <LinearLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
            <EditText android:id="@id/et_nickname" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="12.0dip" android:hint="@string/register_nickname" android:singleLine="true" android:layout_toRightOf="@id/tv_nickname" />
        </RelativeLayout>
        <View android:id="@id/line1" android:background="#ffe3e0e0" android:layout_width="fill_parent" android:layout_height="0.30000007dip" />
        <RelativeLayout android:id="@id/rl_mail" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <TextView android:textSize="18.0sp" android:id="@id/tv_mail" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/register_mail" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <EditText android:id="@id/et_mail" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:hint="@string/register_mail" android:singleLine="true" android:layout_toRightOf="@id/tv_mail" android:layout_centerVertical="true" />
        </RelativeLayout>
        <View android:id="@id/line2" android:background="#ffe3e0e0" android:layout_width="fill_parent" android:layout_height="0.30000007dip" />
        <RelativeLayout android:id="@id/rl_pwd" android:layout_width="fill_parent" android:layout_height="48.0dip">
            <TextView android:textSize="18.0sp" android:id="@id/tv_pwd" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <EditText android:id="@id/et_pwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:hint="@string/register_pwd" android:password="true" android:singleLine="true" android:layout_toRightOf="@id/tv_pwd" android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
    <Button android:textSize="18.0sp" android:id="@id/btn_register" android:background="@drawable/btn_yellow" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip" android:text="@string/register" android:layout_below="@id/ll_login" />
    <LinearLayout android:orientation="horizontal" android:id="@id/rl_other" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="30.0dip" android:layout_below="@id/btn_register">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/iv_sina" android:background="@drawable/icon_sina_gray" android:layout_width="42.0dip" android:layout_height="35.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/iv_qq" android:background="@drawable/icon_qq_gray" android:layout_width="42.0dip" android:layout_height="35.0dip" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/iv_taobao" android:background="@drawable/icon_taobao_gray" android:layout_width="42.0dip" android:layout_height="35.0dip" />
        </LinearLayout>
    </LinearLayout>
    <TextView android:textColor="@color/text_normal" android:gravity="center_horizontal" android:id="@id/tv_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/register_login" android:layout_below="@id/rl_other" />
    <LinearLayout android:id="@id/ll_head" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <include android:id="@id/head" android:layout_width="wrap_content" android:layout_height="wrap_content" layout="@layout/head" />
    </LinearLayout>
</RelativeLayout>