<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/fl_login" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_login" android:background="@drawable/tv_corner_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="45.0dip" android:layout_marginRight="30.0dip">
            <RelativeLayout android:layout_gravity="bottom" android:id="@id/rl_sina" android:layout_width="fill_parent" android:layout_height="48.0dip">
                <TextView android:textSize="18.0sp" android:id="@id/tv_sina" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_centerInParent="true" android:layout_centerVertical="true" />
                <ImageView android:id="@id/iv_sina" android:background="@drawable/icon_sina" android:visibility="invisible" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="20.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <View android:id="@id/line1" android:background="#ffe3e0e0" android:layout_width="fill_parent" android:layout_height="0.30000007dip" />
            <RelativeLayout android:id="@id/rl_qq" android:layout_width="fill_parent" android:layout_height="48.0dip">
                <TextView android:textSize="18.0sp" android:id="@id/tv_mail" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/login_mail" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <LinearLayout android:focusable="true" android:focusableInTouchMode="true" android:layout_width="0.0px" android:layout_height="0.0px" />
                <EditText android:textSize="15.0sp" android:id="@id/et_mail" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/login_mail" android:singleLine="true" android:layout_toRightOf="@id/tv_mail" android:layout_centerVertical="true" />
            </RelativeLayout>
            <View android:id="@id/line2" android:background="#ffe3e0e0" android:layout_width="fill_parent" android:layout_height="0.30000007dip" />
            <RelativeLayout android:id="@id/rl_taobao" android:layout_width="fill_parent" android:layout_height="48.0dip">
                <TextView android:textSize="18.0sp" android:id="@id/tv_pwd" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/login_pwd" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <EditText android:textSize="15.0sp" android:id="@id/et_pwd" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:hint="@string/login_pwd" android:password="true" android:singleLine="true" android:layout_toRightOf="@id/tv_pwd" android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_camera" android:background="@drawable/icon_default_portrait" android:layout_width="80.0dip" android:layout_height="80.0dip" android:layout_marginBottom="8.0dip" />
    </FrameLayout>
    <Button android:textSize="18.0sp" android:id="@id/btn_login" android:background="@drawable/btn_yellow" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="30.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="30.0dip" android:text="@string/login" android:layout_below="@id/fl_login" />
    <TextView android:textColor="@color/text_gray" android:gravity="center_horizontal" android:id="@id/tv_reg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/login_immediately_reg" android:layout_below="@id/btn_login" />
    <LinearLayout android:id="@id/ll_head" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <include android:id="@id/head" android:layout_width="wrap_content" android:layout_height="wrap_content" layout="@layout/head" />
    </LinearLayout>
</RelativeLayout>