<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/ll_s" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/ll_head" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <include android:id="@id/head" android:layout_width="wrap_content" android:layout_height="wrap_content" layout="@layout/head" />
    </LinearLayout>
    <LinearLayout android:gravity="right" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:layout_marginRight="15.0dip">
        <ImageView android:id="@id/iv_close" android:background="@drawable/icon_close" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/ll_set" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:layout_below="@id/ll_head">
        <RelativeLayout android:id="@id/rl_set_mail" android:background="@drawable/setting_item_bg" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@color/text_setting" android:id="@id/tv_mail" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setting_mail" android:singleLine="true" android:layout_alignParentTop="true" />
            <Button android:id="@id/btn_set_mail" android:background="@drawable/btn_bg_gray" android:visibility="gone" android:layout_width="130.0dip" android:layout_height="42.0dip" android:text="@string/setting_set" android:layout_alignParentRight="true" android:layout_centerInParent="true" />
            <LinearLayout android:orientation="vertical" android:id="@id/ll_set_mail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/tv_mail">
                <EditText android:textSize="15.0sp" android:id="@id/et_mail" android:background="@drawable/edit_bg" android:paddingLeft="8.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:hint="邮箱" android:singleLine="true" />
                <EditText android:textSize="15.0sp" android:id="@id/et_pwd" android:background="@drawable/edit_bg" android:paddingLeft="8.0dip" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginRight="15.0dip" android:hint="密码" android:password="true" android:singleLine="true" />
                <Button android:textColor="@color/btn_setting" android:layout_gravity="center" android:id="@id/btn_set" android:background="@drawable/btn_set_yellow" android:layout_width="130.0dip" android:layout_height="42.0dip" android:text="设置" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout android:id="@id/rl_has_update" android:background="@drawable/setting_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
                <TextView android:textSize="17.0sp" android:textColor="@color/text_setting" android:id="@id/tv_new_version1" android:paddingLeft="10.0dip" android:paddingTop="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="最新版本是1.02" />
                <TextView android:textSize="12.0sp" android:textColor="@color/text_setting" android:id="@id/tv_cur_version1" android:paddingLeft="10.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="您当前版本为1.02" />
            </LinearLayout>
            <Button android:textColor="@color/btn_setting" android:id="@id/btn_update" android:background="@drawable/btn_set_yellow" android:layout_width="130.0dip" android:layout_height="42.0dip" android:text="@string/setting_update" android:layout_alignParentRight="true" android:layout_centerInParent="true" />
        </RelativeLayout>
        <RelativeLayout android:id="@id/rl_card" android:background="@drawable/setting_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
                <TextView android:textSize="17.0sp" android:textColor="@color/text_setting" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="清除缓存" />
                <TextView android:textSize="12.0sp" android:id="@id/tv_cache" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="56m" />
            </LinearLayout>
            <Button android:textColor="@color/btn_setting" android:id="@id/btn_clear" android:background="@drawable/btn_set_yellow" android:layout_width="130.0dip" android:layout_height="42.0dip" android:text="@string/setting_cache" android:layout_alignParentRight="true" android:layout_centerInParent="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ll_name" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:id="@id/tv_nick" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="cosmo" android:singleLine="true" />
            <View android:background="@drawable/divider_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ll_no_update" android:background="@drawable/setting_item_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="17.0sp" android:textColor="@color/text_setting" android:id="@id/tv_feedback" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="意见反馈" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout android:id="@id/ad" android:background="@drawable/setting_item_bg" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="10.0dip" android:layout_below="@id/ll_set">
        <TextView android:textSize="17.0sp" android:textColor="@color/text_setting" android:id="@id/tv_app" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="推荐应用" android:layout_alignParentTop="true" />
        <ListView android:id="@id/list" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10.0dip" android:listSelector="#00000000" android:cacheColorHint="#00000000" android:divider="#ffdedfde" android:dividerHeight="1.0px" android:layout_below="@id/tv_app" />
    </RelativeLayout>
</RelativeLayout>